--- a/namelist-parser.cabal
+++ b/namelist-parser.cabal
@@ -1,5 +1,5 @@
 name: namelist-parser
-version: 0.1.2
+version: 0.1.3
 cabal-version: >=1.2
 build-type: Simple
 license: AllRightsReserved
@@ -9,7 +9,7 @@ description:
 data-dir: ""
  
 library
-    build-depends: QuickCheck -any, array -any, base -any, parsec -any
+    build-depends: QuickCheck -any, array -any, base -any, parsec -any, vector -any, containers -any
     exposed-modules: Text.Namelist
     exposed: True
     buildable: True
