--- a/namelist-parser.cabal
+++ b/namelist-parser.cabal
@@ -11,6 +11,7 @@ data-dir: ""
 library
     build-depends: QuickCheck -any, array -any, base -any, parsec -any, vector -any, containers -any
     exposed-modules: Text.Namelist
+                   , Text.Namelist.Types
     exposed: True
     buildable: True
     hs-source-dirs: src
