--- a/namelist-parser.cabal
+++ b/namelist-parser.cabal
@@ -3,10 +3,8 @@ version: 0.1.3
 cabal-version: >=1.2
 build-type: Simple
 license: AllRightsReserved
-license-file: ""
 synopsis: Parses Fortran Namelist files.
-description:  
-data-dir: ""
+description: A parsec library for parsing Fortran Namelist files.
  
 library
     build-depends: QuickCheck -any, array -any, base -any, parsec -any, vector -any, containers -any
