--- a/namelist-parser.cabal
+++ b/namelist-parser.cabal
@@ -1,11 +1,11 @@
 name: namelist-parser
 version: 0.1.10
-cabal-version: >=1.2
+cabal-version: >=1.8
 build-type: Simple
 license: AllRightsReserved
 synopsis: Parses Fortran Namelist files.
 description: A parsec library for parsing Fortran Namelist files.
- 
+
 library
     build-depends: array -any, base -any, attoparsec -any, parsec -any, vector -any, containers -any, text -any
     exposed-modules: Text.Namelist
@@ -16,4 +16,25 @@ library
     buildable: True
     hs-source-dirs: src
     -- ghc-options: -fprof-auto
- 
+
+test-suite tests
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      test
+  main-is:             Test.hs
+  -- other-modules:
+  build-depends:       base
+    , array
+    , namelist-parser
+    , containers
+    , attoparsec
+    , filepath
+    , Glob
+    , parsec
+    , vector
+    , HUnit
+    , QuickCheck
+    -- , random
+    , text
+    , test-framework
+    , test-framework-hunit
+    , test-framework-quickcheck2
