Implement draft for namelist specs

--- a/namelist-parser.cabal
+++ b/namelist-parser.cabal
@@ -21,7 +21,7 @@ test-suite tests
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Test.hs
-  -- other-modules:
+  other-modules: FDSSpec
   build-depends:       base
     , array
     , namelist-parser
